--- a/webBanTiVi/src/main/resources/templates/admin/page/coupon/coupon.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/coupon/coupon.html
@@ -25,10 +25,11 @@
                         <div class="row g-3">
                             <div class="col-lg-5 col-sm-12 text-center">
                                 <div class="text-center">
-                                    <img th:src="@{'/image/product/anhdefault.jpg'}" alt="Chưa chọn ảnh"
+                                    <img th:src="@{'/image/default.jpg'}" alt="Chưa chọn ảnh"
                                          class="rounded image-preview mb-3"
                                          width="250">
                                 </div>
+                                <span id="imageloc" class="error"></span> <br>
                                 <label class="btn btn-primary me-2 mb-4" tabindex="0">
                                     <span class="d-none d-sm-block">Tải ảnh lên</span>
                                     <i class="bx bx-upload d-block d-sm-none"></i>
@@ -42,36 +43,37 @@
                                     <label class="form-label">Mã giảm giá:</label>
                                     <input type="text" class="form-control" th:name="code">
                                     <span id="codeloc" class="error"></span>
-                                    <div class="alert alert-warning"
-                                         th:if="${#fields.hasErrors('code')}"
-                                         th:errors="*{code}"></div>
+                                    <!--                                    <div class="alert alert-warning"-->
+                                    <!--                                         th:if="${#fields.hasErrors('code')}"-->
+                                    <!--                                         th:errors="*{code}"></div>-->
                                 </div>
                                 <div class="mb-3">
                                     <label class="form-label">Giá trị:</label>
                                     <div class="input-group">
-                                        <input type="number" class="form-control" th:name="value">
+                                        <input type="number" class="form-control" name="value">
                                         <span class="input-group-text">%</span>
                                     </div>
                                     <span id="valueloc" class="error"></span>
-                                    <div class="alert alert-warning"
-                                         th:if="${#fields.hasErrors('value')}"
-                                         th:errors="*{value}"></div>
+                                    <!--                                    <div class="alert alert-warning"-->
+                                    <!--                                         th:if="${#fields.hasErrors('value')}"-->
+                                    <!--                                         th:errors="*{value}"></div>-->
                                 </div>
                                 <div class="mb-3">
                                     <label class="form-label">Ngày bắt đầu:</label>
-                                    <input type="date" class="form-control" th:name="dateStart">
+                                    <input type="date" class="form-control" name="dateStart"
+                                           min="">
                                     <span id="dateStartloc" class="error"></span>
-                                    <div class="alert alert-warning"
-                                         th:if="${#fields.hasErrors('dateStart')}"
-                                         th:errors="*{dateStart}"></div>
+                                    <!--                                    <div class="alert alert-warning"-->
+                                    <!--                                         th:if="${#fields.hasErrors('dateStart')}"-->
+                                    <!--                                         th:errors="*{dateStart}"></div>-->
                                 </div>
                                 <div class="mb-3">
                                     <label class="form-label">Ngày kết thúc:</label>
-                                    <input type="date" class="form-control" th:name="dateEnd"/>
+                                    <input type="date" class="form-control" name="dateEnd"/>
                                     <span id="dateEndloc" class="error"></span>
-                                    <div class="alert alert-warning"
-                                         th:if="${#fields.hasErrors('dateEnd')}"
-                                         th:errors="*{dateEnd}"></div>
+                                    <!--                                    <div class="alert alert-warning"-->
+                                    <!--                                         th:if="${#fields.hasErrors('dateEnd')}"-->
+                                    <!--                                         th:errors="*{dateEnd}"></div>-->
                                 </div>
                                 <div class="mb-3">
                                     <label class="form-label">Trạng thái:</label>
@@ -89,15 +91,16 @@
                                             >Chưa hoạt động</label>
                                         </div>
                                         <span id="activeloc" class="error"></span>
-                                        <div class="alert alert-warning"
-                                             th:if="${#fields.hasErrors('active')}"
-                                             th:errors="*{active}"></div>
+                                        <!--                                        <div class="alert alert-warning"-->
+                                        <!--                                             th:if="${#fields.hasErrors('active')}"-->
+                                        <!--                                             th:errors="*{active}"></div>-->
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="modal-footer">
+                        <button type="reset" class="btn btn-secondary">Đặt lại</button>
                         <button type="submit" class="btn btn-primary">Lưu</button>
                     </div>
                 </div>
@@ -107,34 +110,34 @@
 </div>
 <div class="card mb-3 ">
     <div class="card-header">
-<!--        <form class="col-12 mt-2">-->
-<!--            <div class="col-12 row">-->
-<!--                <div class="col-7">-->
-<!--                    <div class="form-check input-group input-group-merge">-->
-<!--                    <span class="input-group-text">-->
-<!--                        <i class="bx bx-search"></i>-->
-<!--                    </span>-->
-<!--                        <input type="text" class="form-control" placeholder="Tìm id">-->
-<!--                        <button class="btn btn-primary" type="button">Tìm kiếm</button>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--                <div class="col-1">-->
-<!--                    <button class="btn btn-secondary" data-bs-toggle="tooltip" data-bs-offset="0,4"-->
-<!--                            data-bs-placement="bottom" data-bs-html="true" title=""-->
-<!--                            data-bs-original-title="<span>Reset filter</span>" aria-describedby="tooltip91262">-->
-<!--                        <i class='bx bx-reset'></i>-->
-<!--                    </button>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </form>-->
+        <form class="col-12 mt-2">
+            <div class="col-12 row">
+                <div class="col-7">
+                    <div class="form-check input-group input-group-merge">
+                    <span class="input-group-text">
+                        <i class="bx bx-search"></i>
+                    </span>
+                        <input type="text" class="form-control" placeholder="Tìm id">
+                        <button class="btn btn-primary" type="button">Tìm kiếm</button>
+                    </div>
+                </div>
+                <div class="col-1">
+                    <button class="btn btn-secondary" data-bs-toggle="tooltip" data-bs-offset="0,4"
+                            data-bs-placement="bottom" data-bs-html="true" title=""
+                            data-bs-original-title="<span>Reset filter</span>" aria-describedby="tooltip91262">
+                        <i class='bx bx-reset'></i>
+                    </button>
+                </div>
+            </div>
+        </form>
     </div>
     <div class="card-body">
         <div class="row">
-<!--            <div class="col-md-2 d-flex align-items-center">-->
-<!--                <p>Coupon :-->
+            <div class="col-md-2 d-flex align-items-center">
+                <p>Coupon :
                     <!--                    <span th:text="${#lists.size(listCou)}"></span>-->
-<!--                </p>-->
-<!--            </div>-->
+                </p>
+            </div>
         </div>
         <hr>
         <div class="table-responsive text-nowrap">
@@ -244,27 +247,18 @@
                                                        class="btn btn-primary btn-control">Các sản phẩm được giảm</a>
                                                 </div>
                                                 <div class="w-auto">
-                                                    <button type="submit"
-                                                            class="btn btn-primary btn-control"
-                                                            onclick="return confirm('Xác nhận cập nhật')">
-<!--<<<<<<< HEAD-->
-                                                        Cập nhật
+                                                    <button type="reset"
+                                                            class="btn btn-primary btn-control">
+                                                        Đặt lại
                                                     </button>
                                                 </div>
                                                 <div class="w-auto">
-                                                    <a th:href="@{/admin/coupon/delete/{id}(id=${coupon.id})}"
-                                                       onclick="return confirm('Xác nhận xóa')">
-                                                        <button type="button"
-                                                                class="btn btn-primary btn-control">
-                                                            Xóa
-                                                        </button>
-                                                    </a>
+                                                    <button type="submit"
+                                                            class="btn btn-primary btn-control"
+                                                            onclick="return confirm('Xác nhận cập nhật')">
+                                                        Sửa
+                                                    </button>
                                                 </div>
-<!--=======-->
-<!--                                                        Sửa-->
-<!--                                                    </button>-->
-<!--                                                </div>-->
-<!--&gt;>>>>>> origin/manhsieuvippro-->
                                             </div>
                                         </form>
                                     </div>
@@ -279,75 +273,77 @@
         <hr class="card-separator">
     </div>
     <div class="card-footer">
+        <div class="d-inline-flex float-end">
 
+        </div>
     </div>
 </div>
-<script src="/admin/plugin/js/loadImage.js">
-    function validateForm() {
+<script>    function validateForm() {
 
-        var code = document.myform.code.value;
-        var value = document.myform.value.value;
-        var dateStart = document.myform.startDay.value;
-        var dateEnd = document.myform.expirationDate.value;
-        var status = false;
+    var code = document.myform.code.value;
+    var value = document.myform.value.value;
+    var dateStart = document.myform.dateStart.value;
+    var dateEnd = document.myform.dateEnd.value;
+    let today = new Date().toISOString().slice(0, 10);
+    var avatar = document.myform.avatar.value;
+    var status = [];
 
-        //code
-        if (code.length < 1) {
-            document.getElementById("codeloc").innerHTML =
-                " <i class='bx bx-x-circle' style='color:#ff0000' ></i> Không được để trống mã!";
-            status = false;
-        } else {
-            document.getElementById("codeloc").innerHTML =
-                " <i class='bx bx-x-circle' style='color:#ff0000' ></i>";
-            status = true;
-        }
-        //value
-        if (value.length < 1) {
-            document.getElementById("valueloc").innerHTML =
-                " <i class='bx bx-x-circle' style='color:#ff0000' ></i> Không được để trống giá trị!";
-            status = false;
-        } else {
-            document.getElementById("valueloc").innerHTML = "";
-            status = true;
-        }
-        //dateStart
-        if (dateStart.length < 1) {
-            document.getElementById("dateStartloc").innerHTML =
-                " <i class='bx bx-x-circle' style='color:#ff0000' ></i> Không được để trống ngày bắt đầu!";
-            status = false;
-        } else {
-            document.getElementById("dateStartloc").innerHTML = "";
-            status = true;
-        }
-        //dateEnd
-        if (dateEnd.length < 1) {
-            document.getElementById("dateEndloc").innerHTML =
-                " <i class='bx bx-x-circle' style='color:#ff0000' ></i> Không được để trống ngày kết thúc!";
-            status = false;
-        } else if (expirationDate.length < startDay.length) {
-            document.getElementById("dateEndloc").innerHTML =
-                " <i class='bx bx-x-circle' style='color:#ff0000' ></i> Ngày kết thúc phải lớn hơn ngày bắt đầu!";
-            status = false;
-        } else {
-            document.getElementById("dateEndloc").innerHTML = "";
-            status = true;
-        }
-        //active
-        // var active = document.form.lang;
-        var active = document.myform.active.value;
-        for (var i = 0; i < active.length; i++) {
-            if (active[i].checked) {
-                break;
-            }
-        }
-        if (i == active.length) {
-            document.getElementById("activeloc").innerHTML =
-                " <i class='bx bx-x-circle' style='color:#ff0000' ></i> Không được để trống trạng thái!";
-            status = false;
-        }
-        return document.getElementById("activeloc").innerHTML = "You select option " + (i + 1);
-
-        return status;
+    //code
+    if (code.trim().length < 1) {
+        document.getElementById("codeloc").innerHTML =
+            " <i class='bx bx-x-circle' style='color:#ff0000' ></i> Không được để trống mã!";
+        status.push(false);
+    } else {
+        document.getElementById("codeloc").innerHTML = "";
     }
+    //image
+    if (avatar.trim().length < 1) {
+        document.getElementById("imageloc").innerHTML =
+            " <i class='bx bx-x-circle' style='color:#ff0000' ></i> Không được để trống ảnh!";
+        status.push(false);
+    } else {
+        document.getElementById("imageloc").innerHTML = "";
+    }
+    //value
+    if (value.trim().length < 1) {
+        document.getElementById("valueloc").innerHTML =
+            " <i class='bx bx-x-circle' style='color:#ff0000' ></i> Không được để trống giá trị!";
+        status.push(false);
+    } else {
+        document.getElementById("valueloc").innerHTML = "";
+    }
+    //dateStart
+    if (dateStart.trim().length < 1) {
+        document.getElementById("dateStartloc").innerHTML =
+            " <i class='bx bx-x-circle' style='color:#ff0000' ></i> Không được để trống ngày bắt đầu!";
+        status.push(false);
+    } else if (today.valueOf() > dateStart.valueOf()) {
+        document.getElementById("dateStartloc").innerHTML =
+            " <i class='bx bx-x-circle' style='color:#ff0000' ></i> Ngày bắt đầu phải lớn hơn ngày hiện tại!";
+        status.push(false);
+    } else {
+        document.getElementById("dateStartloc").innerHTML = "";
+    }
+    //dateEnd
+    if (dateEnd.trim().length < 1) {
+        document.getElementById("dateEndloc").innerHTML =
+            " <i class='bx bx-x-circle' style='color:#ff0000' ></i> Không được để trống ngày kết thúc!";
+        status.push(false);
+    } else if (dateStart.valueOf() > dateEnd.valueOf()) {
+        document.getElementById("dateEndloc").innerHTML =
+            " <i class='bx bx-x-circle' style='color:#ff0000' ></i> Ngày kết thúc phải lớn hơn ngày bắt đầu!";
+        status.push(false);
+    } else {
+        document.getElementById("dateEndloc").innerHTML = "";
+    }
+
+    console.log(status)
+    if (status.indexOf(false) > -1) {
+        return false
+    }
+    // return false
+}
+</script>
+<script src="/admin/plugin/js/loadImage.js">
 </script>
 </html>
