oanh chỉnh sửa form confirm

--- a/webBanTiVi/src/main/resources/templates/user/page/product/detail.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/product/detail.html
@@ -172,7 +172,7 @@
                 Thông số kỹ thuật
                 <!--                <span th:text="${product.product.nameProduct}"></span>-->
             </h3>
-            <div class="table-responsive text-nowrap">
+            <div class="table-responsive">
                 <table class="table" border="0px">
                     <caption class="ms-4">
                     </caption>
